--- a/index.html
+++ b/index.html
@@ -108,21 +108,26 @@
                     Artificial Intelligence and practical applications of Deep Learning (especially in R&D).
                     <br>
                     <br>
-                    In my final semester at Vanderbilt, my AI professor at the time,
-                    <a href="https://my.vanderbilt.edu/mkunda/">Dr. Maithilee Kunda</a>, invited me to join her
-                    newly formed <a href="https://my.vanderbilt.edu/aivaslab/">Artificial Intelligence and Visual
-                    Analog Systems Research Lab</a>. I was the lead researcher all Spring on a NSF funded project at the
-                    intersection of Cognitive Science and Artificial Intelligence. Since graduation, I have continued work
-                    on the project, and am a lead author on our paper being submitted to
-                    <a href="https://aaai.org/Conferences/AAAI/aaai18.php">AAAI-18</a> entitled "A Computational
-                    Cognitive Architecture to Model Human Visual Search for Spatiotemporal Targets." In addition, I will
-                    give an oral presentation of my research at the
-                    <a href="http://conference.aises.org/">AISES National Conference</a> in late September.
-                    <br>
-                    <br>
                     I graduated from <a href="http://www.vanderbilt.edu/">Vanderbilt University</a> in May 2017 with
                     a Bachelors of Science in <a href="https://engineering.vanderbilt.edu/eecs/Undergraduate/index.php">Computer
-                    Science</a> and a Bachelor of Arts in <a href="https://as.vanderbilt.edu/math/">Mathematics</a>.
+                    Science</a> and a Bachelors of Arts in <a href="https://as.vanderbilt.edu/math/">Mathematics</a>.
+                    <br>
+                    <br>
+                    In my final semester at Vanderbilt, I joined
+                    <a href="https://my.vanderbilt.edu/mkunda/">Dr. Maithilee Kunda</a>'s 
+                    newly formed <a href="https://my.vanderbilt.edu/aivaslab/">Artificial Intelligence and Visual
+                    Analog Systems Research Lab</a>.
+                    <br>
+                    I was the lead researcher all Spring on an ONR funded project at the
+                    intersection of Cognitive Science and Artificial Intelligence. Since graduation, I have continued work
+                    on the project, and am a lead author on our paper submitted to
+                    <a href="https://aaai.org/Conferences/AAAI/aaai18.php">AAAI-18</a> entitled "A Computational
+                    Cognitive Architecture to Model Human Visual Search for Spatiotemporal Targets." I gave an oral
+                    presentation of our abstract at the 
+                    <a href="http://conference.aises.org/">AISES National Conference</a> in late September.
+                    <br>
+                    I worked alongside two graduate students in our Lab to create a novel image classification dataset 
+                    to be used in training deep neural networks.
                 </p>
                 <br>
                 <br>
@@ -136,7 +141,7 @@
             </div>
             <div class="col-xs-10">
                 <p class="lead">
-                    I have worked on <a href="https://opensource.org/definition">open source</a> <a
+                    I have worked on open source <a
                         href="https://en.wikipedia.org/wiki/Deep_learning">Deep Learning</a> projects in my free-time
                     this year that have gotten some good recognition — most notably a <b><a
                         href="https://github.com/amdegroot/ssd.pytorch">PyTorch Implementation</a></b> of the <a
@@ -144,12 +149,13 @@
                     real-time object detection using a single network.
                     <br>
                     <br>
-                    I spent last summer interning at <a href="https://www.blackrock.com/">BlackRock</a> working as a <a
+                    I interned last summer at <a href="https://www.blackrock.com/">BlackRock</a> working as a <a
                         href="https://www.sitepoint.com/full-stack-developer/">Full-Stack web developer</a>. My <a
                         href="http://rockthecode.io/tag/hackathon/">Hackathon</a> team won the summer competition with
-                    an <a href="https://en.wikipedia.org/wiki/Machine_learning">ML</a> system to process <a
+                    an ML system to process <a
                         href="http://blog.aylien.com/structured-vs-unstructured-data-exploring-an/">unstructured
                     data</a> at <a href="https://en.wikipedia.org/wiki/Scalability">scale</a> (like legal documents).
+                    The project was picked up and is now in development.
                     <br>
                     <br>
                     I have returned to BlackRock full-time as a Software Engineer on the Core Data team, and
