--- a/index.html
+++ b/index.html
@@ -737,6 +737,23 @@
 <!-- Custom scripts for this template -->
 <script src="js/agency.min.js"></script>
 
+<script>
+      // google analytics
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-97707772-1', 'auto');
+    ga('send', 'pageview');
+</script>
+  
 </body>
 
 </html>
