--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <!-- AISES -->
         <div class="row">
             <div class="col-sm-3">
-                <img src="img/research/infosalience.png" class="paper-fig embed-responsive">
+                <img src="img/research/aises.png" class="paper-fig embed-responsive">
             </div>
             <div class="col-sm-8 offset-1 paper">
                 <h4 class="text-left"> Computational Cognitive Systems to Model Information Salience:
@@ -650,6 +650,7 @@
                 experiments using these models to generate metrics measuring cognitive performance. We then will compare
                 the performance of our models to the human data to determine which models best explain the capacity
                 limitations shown by people.
+                <br>
                 Future applications of this work include prioritizing visual displays to decrease clutter and emphasize
                 critical decision parameters to help humans perform better on difficult, real-world monitoring tasks.
             </div>
