--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#research">Research</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-                </li>
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link js-scroll-trigger" href="#projects">Projects</a>-->
+                <!--</li>-->
                 <!--<li class="nav-item">-->
                 <!--<a class="nav-link js-scroll-trigger" href="#timeline">Timeline</a>-->
                 <!--</li>-->
@@ -100,7 +100,7 @@
 </header>
 
 <!-- About -->
-<section id="about">
+<section class="bg-light" id="about">
     <h1 class="text-uppercase font-weight-bold font-italic">About</h1>
     <div class="container">
         <div class="row">
@@ -235,7 +235,7 @@
 </section>
 
 <!-- RESEARCH -->
-<section class="bg-light" id="research">
+<section id="research">
     <h1 class="text-uppercase font-weight-bold font-italic">RESEARCH</h1>
     <div class="container">
         <!-- LAB -->
@@ -250,8 +250,7 @@
                     <br>Jan 2017 - pres.
                 </h4>
             </div>
-            <div class="col-sm-12">
-            </div>
+            <div class="col-sm-12"></div>
         </div>
         <div class="row"><p><br><br><br></p></div>
         <!-- PUBLICATIONS -->
@@ -260,10 +259,10 @@
         </div>
         <!-- Info Salience -->
         <div class="row">
-            <div class="col-sm-3">
-                <img src="img/research/infosalience.png" class="paper-fig embed-responsive">
+            <div class="col-sm-4">
+                <img src="img/research/infosalience.png" class="embed-responsive">
             </div>
-            <div class="col-sm-8 offset-1 paper">
+            <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left"> A Computational Cognitive Architecture to Model Human Visual Search for
                     Spatiotemporal Targets</h4>
                 <p class="paper-info">
@@ -298,10 +297,10 @@
         </div>
         <!-- AISES -->
         <div class="row">
-            <div class="col-sm-3">
-                <img src="img/research/aises.png" class="paper-fig embed-responsive">
+            <div class="col-sm-4">
+                <img src="img/research/aises-alt-1.png" class="paper-fig embed-responsive">
             </div>
-            <div class="col-sm-8 offset-1 paper">
+            <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left"> Computational Cognitive Systems to Model Information Salience:
                     <span class="text-muted">SpatioTemporal Template-based Search</span></h4>
                 <p class="paper-info">
@@ -322,7 +321,7 @@
                     Abstract
                 </button>
                 <a role="button" class="btn btn-sm btn-outline-secondary link" target="_blank"
-                   href="data/aises_elb.pptx" target="_blank">
+                   href="https://docs.google.com/presentation/d/e/2PACX-1vTZMsXTsUARrHq0TMRYhMBA3yaHOUI8OnS0GmsczXkZEDnjPtLuTj-py7MAGPmCs5FmpAkHTILFdTdr/pub?start=false&loop=false&delayms=3000" target="_blank">
                     Slides
                 </a>
                 <a role="button" class="btn btn-sm btn-outline-secondary link" target="_blank"
@@ -589,12 +588,12 @@
 <!--</div>-->
 <!--</section>-->
 <!-- Info Salience Modal -->
-<div class="modal fade" id="info-salience-abstract" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+<div class="modal fade" id="info-salience-abstract" tabindex="-1" role="dialog" aria-labelledby="info-salience-abstract-title"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Abstract</h5>
+                <h5 class="modal-title" id="info-salience-abstract-title">Abstract</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -625,12 +624,12 @@
     </div>
 </div>
 <!-- AISES Modal -->
-<div class="modal fade" id="aises-abstract" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+<div class="modal fade" id="aises-abstract" tabindex="-1" role="dialog" aria-labelledby="aises-abstract-title"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Abstract</h5>
+                <h5 class="modal-title" id="aises-abstract-title">Abstract</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
