--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
             <p>SOFTWARE @ BLACKROCK
                 &nbsp &middot &nbsp
                 RESEARCH @ VANDERBILT AIVAS LAB</p>
-            <div class="intro-bottom ">ELLIS [dot] L [dot] BROWN [at] VANDERBILT [dot] EDU</div>
+            <div class="intro-bottom ">
+                <a href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank">ELLIS.L.BROWN@VANDERBILT.EDU</a>
+            </div>
             <div class="intro-bottom text-uppercase">
                 <a href="http://github.com/ellisbrown" target="_blank">[GitHub]</a>
                 &nbsp &middot &nbsp
@@ -206,32 +208,6 @@
                 </ul>
             </div>
         </div>
-        <!--<div class="row">-->
-        <!--<div class="col-sm-12">-->
-        <!--<h3 class="text-left">Experience</h3>-->
-        <!--</div>-->
-        <!--<div class="col-sm-2">-->
-        <!--<br>-->
-        <!--<img src="img/about/experience/blackrock.png" class="experience-fig rounded">-->
-        <!--</div>-->
-        <!--<div class="col-sm-6">-->
-        <!--<p class="">BlackRock<br>-->
-        <!--Software Engineer<br>-->
-        <!--07/2017 - pres.-->
-        <!--</p>-->
-        <!--</div>-->
-        <!--<div class="col-sm-12"><br><br></div>-->
-        <!--<div class="col-sm-2">-->
-        <!--<img src="img/about/experience/aivas-alt.png" class="experience-fig rounded">-->
-        <!--</div>-->
-        <!--<div class="col-sm-6 profile">-->
-        <!--<p class="profile">Vanderbilt Artificial Intelligence and Visual Analogical Systems Lab<br>-->
-        <!--St. Louis, MO<br>-->
-        <!--2013-->
-        <!--</p>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
     </div>
 </section>
 
@@ -239,6 +215,7 @@
 <section id="research">
     <h1 class="text-uppercase font-weight-bold font-italic">RESEARCH</h1>
     <div class="container">
+
         <!-- LAB -->
         <div class="row">
             <div class="col-sm-4">
@@ -247,17 +224,20 @@
             <div class="col-sm-8">
                 <h3 class="font-italic">Vanderbilt Artificial Intelligence & Visual Analogical Systems Lab</h3>
                 <h4 class="text-muted font-italic ">Research Assistant, advised by
-                    <a href="http://my.vanderbilt.edu/mkunda/"> Dr. Maithilee Kunda</a>
+                    <a href="http://my.vanderbilt.edu/mkunda/" target="_blank"> Dr. Maithilee Kunda</a>
                     <br>Jan 2017 - pres.
                 </h4>
             </div>
             <div class="col-sm-12"></div>
         </div>
         <div class="row"><p><br><br><br></p></div>
+
+
         <!-- PUBLICATIONS -->
         <div class="row">
             <h2 class="text-left text-uppercase font-italic" id="publications">PUBLICATIONS</h2>
         </div>
+
         <!-- Info Salience -->
         <div class="row">
             <div class="col-sm-4">
@@ -279,7 +259,7 @@
                 </p>
                 <p class="paper-info asterisk text-muted">*These authors contributed equally to this research</p>
                 <p class="paper-info">Preparing for submission to CogSci-18. (2018, Feb. 1).</p>
-                <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
+                <button type="button" class="btn btn-sm btn-outline-secondary link" data-toggle="modal"
                         data-target="#info-salience-abstract">
                     Abstract
                 </button>
@@ -292,14 +272,17 @@
             </div>
         </div>
         <div class="row"><p><br></p></div>
+
+
         <!-- PRESENTATIONS -->
         <div class="row">
             <h2 class="text-left text-uppercase font-italic" id="presentations">PRESENTATIONS</h2>
         </div>
+
         <!-- AISES -->
         <div class="row">
             <div class="col-sm-4">
-                <img src="img/research/aises-alt-1.png" class="paper-fig embed-responsive">
+                <img src="img/research/aises-alt-2.png" class="paper-fig embed-responsive">
             </div>
             <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left"> Computational Cognitive Systems to Model Information Salience:
@@ -317,7 +300,7 @@
                 </p>
                 <p class="paper-info">Oral presentation given at the American Indian Science and Engineering Society
                     National Conference. Denver, CO. (2017, September 21).</p>
-                <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
+                <button type="button" class="btn btn-sm btn-outline-secondary link" data-toggle="modal"
                         data-target="#aises-abstract">
                     Abstract
                 </button>
@@ -416,8 +399,9 @@
                 <h5 class="text-muted">Gender Inference from Character Sequences in Multinational First Names</h5>
                 <p class="paper-info">
                     <span class="badge keyword">Natural Language Processing</span>
-                    <span class="badge keyword">Recurrent Neural Network</span>
                     <span class="badge keyword">Naïve-Bayes</span>
+                    <span class="badge keyword">NLTK</span>
+                    <span class="badge keyword">Recurrent Neural Network</span>
                     <span class="badge keyword">PyTorch</span>
                 </p>
                 <p class="text-left paper-info">
@@ -487,8 +471,50 @@
         </div>
         <div class="row"><p><br></p></div>
 
+        <!-- FINANCE ML -->
+        <div class="row project">
+            <div class="col-sm-4 figure">
+                <img src="https://cdn-images-1.medium.com/max/762/1*xR4m0oOKz_jRgQU4Oge53g.jpeg"
+                     class="embed-responsive rounded">
+            </div>
+            <div class="col-sm-7 offset-1 paper">
+                <h4 class="text-left">FinanceML | Sentiment Analysis
+                    <div class="pull-right">
+                        <!-- Place this tag where you want the button to render. -->
+                        <a class="github-button" href="https://github.com/dcarr45/FinanceML/subscription"
+                           data-icon="octicon-eye" aria-label="Watch dcarr45/FinanceML on GitHub">Watch</a>
+                        <!-- Place this tag where you want the button to render. -->
+                        <a class="github-button" href="https://github.com/dcarr45/FinanceML" data-icon="octicon-star"
+                           aria-label="Star dcarr45/FinanceML on GitHub">Star</a>
+                        <!-- Place this tag where you want the button to render. -->
+                        <a class="github-button" href="https://github.com/dcarr45/FinanceML/fork"
+                           data-icon="octicon-repo-forked" aria-label="Fork dcarr45/FinanceML on GitHub">Fork</a>
+                    </div>
+                    <br>
+                </h4>
+                <h5 class="text-muted">Predicting Near-Term S&P 500 Index Trends</h5>
+                <p class="paper-info">
+                    <span class="badge keyword">Natural Language Processing</span>
+                    <span class="badge keyword">Sentiment Analysis</span>
+                    <span class="badge keyword">Finance</span>
+                    <span class="badge keyword">NLTK</span>
+                </p>
+                <p class="text-left paper-info">
+                    <strong>Ellis Brown</strong>, Danny Carr, Max Puidak
+                </p>
+                <p>Joint final project for CS 3892 (Big Data). I performed sentiment analysis on historical news in
+                    order to attempt to predict movements in the S&P 500. This was my first foray into Machine
+                    Learning.</p>
+                <a role="button" class="btn btn-sm btn-outline-secondary link" target="_blank"
+                   href="http://www.github.com/dcarr45/FinanceML" target="_blank">
+                    Code
+                </a>
+            </div>
+        </div>
+        <div class="row"><p><br></p></div>
     </div>
 </section>
+
 
 <!-- Info Salience Modal -->
 <div class="modal fade" id="info-salience-abstract" tabindex="-1" role="dialog"
