--- a/index.html
+++ b/index.html
@@ -83,21 +83,23 @@
 <!-- Header -->
 <header class="masthead">
     <div class="container">
-        <div class="intro-text">
-            <!--<div class="intro-lead-in">Welcome To Our Studio!</div>-->
-            <div class="intro-heading font-italic text-uppercase">Ellis L Brown II.</div>
-            <p>SOFTWARE @ BLACKROCK
-                &nbsp &middot &nbsp
-                RESEARCH @ VANDERBILT AIVAS LAB</p>
-            <div class="intro-bottom ">
-                <a href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank">ELLIS.L.BROWN@VANDERBILT.EDU</a>
+        <div class="intro">
+            <div class="intro-text">
+                <!--<div class="intro-lead-in">Welcome To Our Studio!</div>-->
+                <div class="intro-heading font-italic text-uppercase">Ellis L Brown II.</div>
+                <p>SOFTWARE @ BLACKROCK
+                    &nbsp &middot &nbsp
+                    RESEARCH @ VANDERBILT AIVAS LAB</p>
+                <div class="intro-bottom ">
+                    <a href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank">ELLIS.L.BROWN@VANDERBILT.EDU</a>
+                </div>
+                <div class="intro-bottom text-uppercase">
+                    <a href="http://github.com/ellisbrown" target="_blank">[GitHub]</a>
+                    &nbsp &middot &nbsp
+                    <a href="data/ELBII-cv-20180108.pdf" target="_blank">[CV (01.08.2018)]</a>
+                </div>
+                <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>-->
             </div>
-            <div class="intro-bottom text-uppercase">
-                <a href="http://github.com/ellisbrown" target="_blank">[GitHub]</a>
-                &nbsp &middot &nbsp
-                <a href="data/ELBII-cv-20180108.pdf" target="_blank">[CV (01.08.2018)]</a>
-            </div>
-            <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>-->
         </div>
     </div>
 </header>
@@ -106,6 +108,7 @@
 <section class="bg-light" id="about">
     <h1 class="text-uppercase font-weight-bold font-italic">About</h1>
     <div class="container">
+
         <div class="row">
             <div class="col-sm-12 profile">
                 <!--<div class="team-member">-->
@@ -135,13 +138,14 @@
                 </ul>
                 <p><br>I am a software engineer with experience in research and open source development. I am interested
                     in Artificial Intelligence, Deep Learning, and Cognitive Science.</p>
-                <p>I currently work as a software engineer at BlackRock. I also work remotely at Vanderbilt's <a
+                <p>I currently work as a software engineer at BlackRock. I also work remotely with Vanderbilt's <a
                         href="http://my.vanderbilt.edu/aivaslab/">AIVAS Lab</a> as a research assistant advised by <a
                         href="http://my.vanderbilt.edu/mkunda/">Dr. Maithilee Kunda</a>.</p>
                 <p>I graduated from Vanderbilt University in May 2017 with a Bachelor of Science in Computer Science and
                     a Bachelor of Arts in Mathematics. I spent my senior spring as a research lead in the AIVAS Lab.</p>
             </div>
         </div>
+
         <!-- NEWS -->
         <div class="row">
             <div id="news" class="col-sm-8 border border-dark">
@@ -172,6 +176,7 @@
                 </ul>
             </div>
         </div>
+
         <!-- EDUCATION -->
         <div class="row">
             <div class="col-sm-8">
@@ -197,6 +202,7 @@
                 </div>
             </div>
         </div>
+
         <!-- TEACHING -->
         <div class="row">
             <div class="col-sm-8">
@@ -206,6 +212,34 @@
                 <ul>
                     <li>Teaching Assistant, CS 2201 (Program Design and Data Structures)</li>
                 </ul>
+            </div>
+        </div>
+        <!-- AFFILIATIONS -->
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="col-sm-12">
+                    <h3 class="text-left text-uppercase font-italic">Affiliations</h3>
+                </div>
+                <div class="row seal-row">
+                    <div class="col-sm-4 profile">
+                        <a href="https://www.osagenation-nsn.gov/" target="_blank">
+                            <img src="img/about/affiliations/osage-nation.png" class="school-fig rounded-circle">
+                        </a>
+                        <p class="profile">Osage Nation<br>Member</p>
+                    </div>
+                    <div class="col-sm-4 profile">
+                        <a href="http://www.aises.org/" target="_blank">
+                            <img src="img/about/affiliations/aises.png" class="school-fig">
+                        </a>
+                        <p class="profile">AISES<br>Member</p>
+                    </div>
+                    <div class="col-sm-4 profile">
+                        <a href="https://www.limeconnect.com/programs/page/about-the-lime-network" target="_blank">
+                            <img src="img/about/affiliations/lime-connect.png" class="school-fig rounded">
+                        </a>
+                        <p class="profile">Lime Connect Network<br>Member</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -219,7 +253,9 @@
         <!-- LAB -->
         <div class="row">
             <div class="col-sm-4">
-                <img class="lab embed-responsive" src="img/research/aivas.png">
+                <a href="http://my.vanderbilt.edu/aivaslab/" target="_blank">
+                    <img class="lab embed-responsive" src="img/research/aivas.png">
+                </a>
             </div>
             <div class="col-sm-8">
                 <h3 class="font-italic">Vanderbilt Artificial Intelligence & Visual Analogical Systems Lab</h3>
@@ -328,7 +364,9 @@
         <!-- SSD PYTORCH -->
         <div class="row project">
             <div class="col-sm-4 figure">
-                <img src="img/projects/ssd.png" class="embed-responsive">
+                <a href="http://www.github.com/amdegroot/ssd.pytorch" target="_blank">
+                    <img src="img/projects/ssd.png" class="embed-responsive">
+                </a>
             </div>
             <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left">SSD.PyTorch
@@ -358,6 +396,7 @@
                 </p>
                 <p class="text-left paper-info">
                     <a href="https://amdegroot.github.io/" target="_blank">Max DeGroot</a>, <strong>Ellis Brown</strong>
+                    <span class="pull-right font-weight-bold">Mar 2017</span>
                 </p>
                 <p>Implemented SSD, a unified framework for real-time object detection using a single network. Has
                     become the de facto implementation in PyTorch.</p>
@@ -376,7 +415,9 @@
         <!-- NAME2GENDER -->
         <div class="row project">
             <div class="col-sm-4 figure">
-                <img src="img/projects/name2gender.png" class="embed-responsive">
+                <a href="https://towardsdatascience.com/name2gender-introduction-626d89378fb0" target="_blank">
+                    <img src="img/projects/name2gender.png" class="embed-responsive">
+                </a>
             </div>
             <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left">Name2Gender
@@ -406,6 +447,8 @@
                 </p>
                 <p class="text-left paper-info">
                     <strong>Ellis Brown</strong>
+                    <span class="pull-right font-weight-bold">Dec 2017</span>
+
                 </p>
                 <p>Used Naïve-Bayes and PyTorch Char-RNN to extrapolate gender from character sequences in first names
                     from around the world.
@@ -430,7 +473,9 @@
         <!-- DEEP GENRES -->
         <div class="row project">
             <div class="col-sm-4 figure">
-                <img src="img/projects/deepgenres.png" class="embed-responsive">
+                <a href="http://www.github.com/amdegroot/deepgenres.torch" target="_blank">
+                    <img src="img/projects/deepgenres.png" class="embed-responsive">
+                </a>
             </div>
             <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left">DeepGenres.Torch
@@ -460,6 +505,7 @@
                 </p>
                 <p class="text-left paper-info">
                     <a href="https://amdegroot.github.io/" target="_blank">Max DeGroot</a>, <strong>Ellis Brown</strong>
+                    <span class="pull-right font-weight-bold">Mar 2017 </span>
                 </p>
                 <p>A deep learning method for automatically labeling songs by genre using Torch. The primary reason for
                     creating this was to become more familiar with deep learning for audio.</p>
@@ -474,8 +520,10 @@
         <!-- FINANCE ML -->
         <div class="row project">
             <div class="col-sm-4 figure">
-                <img src="https://cdn-images-1.medium.com/max/762/1*xR4m0oOKz_jRgQU4Oge53g.jpeg"
-                     class="embed-responsive rounded">
+                <a href="http://www.github.com/dcarr45/FinanceML" target="_blank">
+                    <img src="https://cdn-images-1.medium.com/max/762/1*xR4m0oOKz_jRgQU4Oge53g.jpeg"
+                         class="embed-responsive rounded">
+                </a>
             </div>
             <div class="col-sm-7 offset-1 paper">
                 <h4 class="text-left">FinanceML | Sentiment Analysis
@@ -501,6 +549,7 @@
                 </p>
                 <p class="text-left paper-info">
                     <strong>Ellis Brown</strong>, Danny Carr, Max Puidak
+                    <span class="pull-right font-weight-bold">May 2016</span>
                 </p>
                 <p>Joint final project for CS 3892 (Big Data). I performed sentiment analysis on historical news in
                     order to attempt to predict movements in the S&P 500. This was my first foray into Machine
