--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         </div>
 
         <!-- NEWS -->
-        <div class="row">
-            <div id="news" class="col-sm-8 border border-dark">
+        <div id="news" class="row">
+            <div class="col-sm-8 border border-dark">
                 <h3 class="text-left text-uppercase font-italic">News</h3>
                 <ul>
                     <!--<li>[2018/01] I am applying to PhD programs for Fall 2019 entry.</li>-->
@@ -178,7 +178,7 @@
         </div>
 
         <!-- EDUCATION -->
-        <div class="row">
+        <div class="row" id="education">
             <div class="col-sm-8">
                 <div class="col-sm-12">
                     <h3 class="text-left text-uppercase font-italic">Education</h3>
@@ -204,7 +204,7 @@
         </div>
 
         <!-- TEACHING -->
-        <div class="row">
+        <div class="row" id="teaching">
             <div class="col-sm-8">
                 <div class="col-sm-12">
                     <h3 class="text-left text-uppercase font-italic">TEACHING</h3>
@@ -215,7 +215,7 @@
             </div>
         </div>
         <!-- AFFILIATIONS -->
-        <div class="row">
+        <div class="row" id="affiliations">
             <div class="col-sm-8">
                 <div class="col-sm-12">
                     <h3 class="text-left text-uppercase font-italic">Affiliations</h3>
@@ -270,8 +270,8 @@
 
 
         <!-- PUBLICATIONS -->
-        <div class="row">
-            <h2 class="text-left text-uppercase font-italic" id="publications">PUBLICATIONS</h2>
+        <div class="row" id="publications">
+            <h2 class="text-left text-uppercase font-italic">PUBLICATIONS</h2>
         </div>
 
         <!-- Info Salience -->
@@ -311,8 +311,8 @@
 
 
         <!-- PRESENTATIONS -->
-        <div class="row">
-            <h2 class="text-left text-uppercase font-italic" id="presentations">PRESENTATIONS</h2>
+        <div class="row" id="presentations">
+            <h2 class="text-left text-uppercase font-italic">PRESENTATIONS</h2>
         </div>
 
         <!-- AISES -->
