--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Ellis Brown personal site">
     <meta name="author" content="Ellis Brown">
+    <!-- Open Graph  -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@ellisbrownii" />
+    <meta property="og:title" content="Ellis Brown"/>
+    <meta property="og:description" content="Personal site."/>
+    <meta property="og:image" content="img/cay17.jpg">
+    <meta property="og:url" content="https://ellisbrown.github.io" />
+    <meta property="og:type" content="website" />
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
