--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- Open Graph  -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@ellisbrownii" />
-    <meta name="twitter:title" content="Ellis Brown Personal Site" />
+    <meta name="twitter:title" content="Ellis Brown | Personal Site" />
     <meta name="twitter:image" content="http://ellisbrown.me/img/cay17.jpg" />
     <meta property="og:title" content="Ellis Brown"/>
-    <meta property="og:description" content="Personal site."/>
+    <meta property="og:description" content="About me"/>
     <meta property="og:image" content="http://ellisbrown.me/img/cay17.jpg">
     <meta property="og:url" content="http://ellisbrown.me" />
     <meta property="og:type" content="website" />
