--- a/index.html
+++ b/index.html
@@ -17,21 +17,16 @@
     <meta property="og:image" content="http://ellisbrown.me/img/cay17.jpg">
     <meta property="og:url" content="http://ellisbrown.me" />
     <meta property="og:type" content="website" />
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start': new Date().getTime(), event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-PFQHPN5');</script>
-    <!-- End Google Tag Manager -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-97707772-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-97707772-1');
+    </script>
+    
     <title>Ellis L Brown II</title>
 
     <!-- Bootstrap core CSS -->
@@ -909,20 +904,20 @@
     $(function () {
         $('[data-toggle="popover"]').popover()
     })
-    //    // google analytics
-    //    $(function (i, s, o, g, r, a, m) {
-    //        i['GoogleAnalyticsObject'] = r;
-    //        i[r] = i[r] || function () {
-    //            (i[r].q = i[r].q || []).push(arguments)
-    //        }, i[r].l = 1 * new Date();
-    //        a = s.createElement(o),
-    //            m = s.getElementsByTagName(o)[0];
-    //        a.async = 1;
-    //        a.src = g;
-    //        m.parentNode.insertBefore(a, m)
-    //    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    //    ga('create', 'UA-97707772-1', 'auto');
-    //    ga('send', 'pageview');
+   // google analytics
+   $(function (i, s, o, g, r, a, m) {
+       i['GoogleAnalyticsObject'] = r;
+       i[r] = i[r] || function () {
+           (i[r].q = i[r].q || []).push(arguments)
+       }, i[r].l = 1 * new Date();
+       a = s.createElement(o),
+           m = s.getElementsByTagName(o)[0];
+       a.async = 1;
+       a.src = g;
+       m.parentNode.insertBefore(a, m)
+   })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+   ga('create', 'UA-97707772-1', 'auto');
+   ga('send', 'pageview');
 </script>
 
 </body>
