--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
 </head>
 
 <body id="page-top">
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PFQHPN5"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -100,7 +95,7 @@
                     &nbsp &middot &nbsp
                     RESEARCH @ VANDERBILT AIVAS LAB</p>
                 <div class="intro-bottom ">
-                    <a href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank">ELLIS.L.BROWN@VANDERBILT.EDU</a>
+                    ELLIS [dot] L [dot] BROWN [at] VANDERBILT [dot] EDU</a>
                 </div>
                 <div class="intro-bottom text-uppercase">
                     <a href="http://github.com/ellisbrown" target="_blank">[GitHub]</a>
