--- a/index.html
+++ b/index.html
@@ -967,6 +967,13 @@
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-97707772-1', 'auto');
     ga('send', 'pageview');
+    $(document).ready(function() {
+
+    if(window.location.href.indexOf('#aises-abstract') != -1) {
+        $('#aises-abstract').modal('show');
+    }
+
+});
 </script>
 
 </body>
