--- a/index.html
+++ b/index.html
@@ -334,8 +334,9 @@
                 <img src="img/research/infosalience.png" class="embed-responsive">
             </div>
             <div class="col-sm-7 offset-1 paper">
-                <h4 class="text-left"> A Computational Cognitive Architecture to Model Human Visual Search for
-                    Spatiotemporal Targets</h4>
+                <h4 class="text-left">SpatioTemporal Template-based Search (STTS):
+                    An Architecture to Model Search for Spatiotemporal Targets
+                </h4>
                 <p class="paper-info">
                     <span class="badge keyword">Cognitive Architecture</span>
                     <span class="badge keyword">Cognitive Modelling</span>
@@ -632,26 +633,27 @@
                 </button>
             </div>
             <div class="modal-body">
-                <h6 class="text-muted">A Computational Cognitive Architecture to Model Human Visual Search for
-                    Spatiotemporal Targets</h6>
-                This paper presents a new computational cognitive architecture used to model and understand human visual
-                attention in the specific context of visual search for a spatiotemporal target. This type of search
-                occurs frequently in human experience, from military or aviation staff monitoring complex displays of
-                multiple moving objects to daycare teachers monitoring a group of children on a playground for risky
-                behaviors. What differentiates these spatiotemporal search tasks from more traditional visual search
-                tasks is that the target cannot be identified from a single frame of visual experience; the target is
-                defined as a spatiotemporal pattern that unfolds over time, and so detecting the target is also an
-                activity that must integrate information over time. Results from a previous human participant study
-                found that humans show interesting attentional capacity limitations in this type of search task. We
-                created a computational cognitive architecture, called the SpatioTemporal Template-based Search (STTS)
-                architecture, that solves the same spatiotemporal search task using a wide variety of parameterized
-                models that each represents a different cognitive theory of visual attention from the psychological
-                literature. We present results from initial computational experiments using STTS as a first step towards
-                understanding the computational nature of attentional bottlenecks in this type of search task, and we
-                discuss how continued STTS experiments will help determine which theoretical models best explain the
-                capacity limitations shown by humans. We expect that in the long run, results from this research will
-                help refine the design of visual information displays to help human operators perform more efficiently
-                and effectively on difficult, real-world monitoring tasks.
+                <h6 class="text-muted">SpatioTemporal Template-based Search (STTS): 
+                    An Architecture to Model Search for Spatiotemporal Targets
+                </h6>
+                Visual search for a spatiotemporal target occurs frequently in human experience–from military
+                or aviation staff monitoring complex displays of multiple moving objects to daycare teachers 
+                monitoring a group of children on a playground for risky behaviors. In spatiotemporal search,
+                unlike more traditional visual search tasks, the target cannot be identified from a single
+                frame of visual experience; as the target is a spatiotemporal pattern that unfolds over time,
+                detection of the target must also integrate information over time. We propose a new computational 
+                cognitive architecture used to model and understand human visual attention in the specific 
+                context of visual search for a spatiotemporal target. Results from a previous human participant 
+                study found that humans show interesting attentional capacity limitations in this type of search
+                task. Our architecture, called the SpatioTemporal Template-based Search (STTS) architecture,
+                solves the same search task from the study using a wide variety of parameterized models that
+                each represent a different cognitive theory of visual attention from the psychological 
+                literature. We present results from initial computational experiments using STTS as a first
+                step towards understanding the computational nature of attentional bottlenecks in this type of
+                search task, and we discuss how continued STTS experiments will help determine which theoretical
+                models best explain the capacity limitations shown by humans. We expect that in the long run,
+                results from this research will help refine the design of visual information displays to help
+                human operators perform more efficiently and effectively on difficult, real-world monitoring tasks.
             </div>
         </div>
     </div>
