--- a/index.html
+++ b/index.html
@@ -331,14 +331,14 @@
         </div>
         <div class="row"><p><br><br><br></p></div>
 
-<!-- 
+
         <!-- PUBLICATIONS -->
-        <div class="row" id="publications">
+        <!-- <div class="row" id="publications">
             <h2 class="text-left text-uppercase font-italic">PUBLICATIONS</h2>
-        </div>
+        </div> -->
 
         <!-- Info Salience -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-4">
                 <img src="img/research/infosalience.png" class="embed-responsive">
             </div>
